# web-cmbf

./: .gitignore  Cargo.toml  README.md  cert.pem  key.pem
frontend/: design.css  env.properties  err.html  home.html  info.html  menu.css  news.css  race_events.html
frontend/de/: err.html  home.html  info.html  news.html  race_events.html
frontend/en/: err.html  home.html  info.html  news.html  race_events.html
frontend/languages/: de.json
frontend/pictures/: Technischer_Bericht_JR3.docx
frontend/scripts/: scroll_functions.js  utils.js
src/: language.rs  logging.rs  main.rs  properties.rs  thread_pool.rs
