[package]
name = "web_cmbf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-files = "0.6.2"
lazy_static = "1.4.0"
chrono = "0.4.23"
futures = "0.3.28"